Fix layout and spacing in blog and posts

--- a/src/components/prism.css
+++ b/src/components/prism.css
@@ -4,6 +4,10 @@
  * @author Lea Verou
  */
 
+.gatsby-highlight {
+  margin-bottom: 1.75rem;
+}
+
 code[class*="language-"],
 pre[class*="language-"] {
   color: rgb(240, 240, 240);
